[project]
name = "missevan-audio-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "Alvin Yates",email = "mambothief@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
